--- a/index.html
+++ b/index.html
@@ -7,6 +7,32 @@
     <link rel="stylesheet" href="styles.css"
 </head>
 <body>
+
+    <main>
+        <section class="modal-box">
+            <div class="playground-box">
+                <div class="player player-1">
+                    <h4 class="player-heading player-1">Player 1</h4>
+                    <p class="player-score player-1">Score</p>
+                    <div class="score-box score-box-player-1">
+                        <p class="player-current-score player-current-score-player-1">Current</p>
+                        <p class="score-end score-end-player-1">Score</p>
+                    </div>
+                </div>
+                <div class="middle-section">
+                   <button class="new-game">New game</button>
+                </div>
+                <div class="player player-2">
+                    <h4 class="player-heading player-1">Player 1</h4>
+                    <p class="player-score player-1">Score</p>
+                    <div class="score-box score-box-player-1">
+                        <p class="player-current-score player-current-score-player-1">Current</p>
+                        <p class="score-end score-end-player-1">Score</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+    </main>
     
     <script src="app.js"></script>
 </body>
