Layout in progress

--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
                 </div>
                 <div class="middle-section">
                    <button class="new-game">New game</button>
+                   <button class="new-game1">New game</button>
+                   <button class="new-game2">New game</button>
                 </div>
                 <div class="player player-2">
                     <h4 class="player-heading player-1">Player 1</h4>
