Some change after consulting

--- a/index.html
+++ b/index.html
@@ -12,24 +12,25 @@
         <section class="modal-box">
             <div class="playground-box">
                 <div class="player player-1">
-                    <h4 class="player-heading player-1">Player 1</h4>
-                    <p class="player-score player-1">Score</p>
+                    <h4 class="player-heading">Player 1</h4>
+                    <p class="player-score score-player-1">0</p>
                     <div class="score-box score-box-player-1">
                         <p class="player-current-score player-current-score-player-1">Current</p>
-                        <p class="score-end score-end-player-1">Score</p>
+                        <p class="score-end score-end-player-1">0</p>
                     </div>
                 </div>
                 
                    <button class="new-game">🔁 New game</button>
-                   <button class="new-game1">🎲 Roll dice</button>
-                   <button class="new-game2">⌛ Hold</button>
+                   <p class="rollResult">0</p>
+                   <button class="roll-game">🎲 Roll dice</button>
+                   <button class="hold-game">⌛ Hold</button>
                 
                 <div class="player player-2">
-                    <h4 class="player-heading player-1">Player 2</h4>
-                    <p class="player-score player-1">Score</p>
-                    <div class="score-box score-box-player-1">
-                        <p class="player-current-score player-current-score-player-1">Current</p>
-                        <p class="score-end score-end-player-1">Score</p>
+                    <h4 class="player-heading">Player 2</h4>
+                    <p class="player-score score-player-2">0</p>
+                    <div class="score-box score-box-player-2">
+                        <p class="player-current-score player-current-score-player-2">Current</p>
+                        <p class="score-end score-end-player-2">0</p>
                     </div>
                 </div>
             </div>
